# 20240711

./: CMakeLists.txt  README.md
common/: CMakeLists.txt
common/include/: cppTypes.h
common/include/rt/: PeriodicTask.h
common/src/rt/: PeriodicTask.cpp
common/src/utilities/: Utilities_print.cpp  utilities.cpp
config/: ethercat_config.yaml
user/: CMakeLists.txt
user/sri_one/: CMakeLists.txt  main.cpp
user/sri_one/FSM_States/: ControlFSM.cpp  ControlFSM.h  ControlFSMData.h  FSM_State.cpp  FSM_State.h  FSM_State_CMPC.cpp  FSM_State_CMPC.h  FSM_State_Passive.cpp  FSM_State_Passive.h  FSM_State_Zero.cpp  FSM_State_Zero.h  TransitionData.h
user/sri_one/cmpc/: FootSwingTrajectory.cpp  RobotState.cpp  RobotState.h  SolverMPC.cpp  SolverMPC.h  cmpc_databuffer.h
user/sri_one/control/: EthercatSlaveBase.cpp  EthercatSlaveBase.h  LegBoard.cpp  LegBoard.h  can_bus_protocol.cpp  can_bus_protocol.h  imu_reader.cpp  imu_reader.h  rt_ethercat.cpp  rt_ethercat.h
user/sri_one/urdf/: sri.urdf
user/sri_one/utils/: ControlParameterInterface.cpp  ControlParameters.cpp  ControlParameters.h  PositionVelocityEstimator.cpp  PositionVelocityEstimator.h  StateEstimatorContainer.h  sri_kin.cpp  sri_kin.h  udp.c  udp.h
